--- a/README.org
+++ b/README.org
@@ -5,18 +5,15 @@ All of my takes are an amalgamation of the following fine people:
 + Henrik Lissner (creator of Doom Emacs!) -[[https://github.com/hlissner/dotfiles][GitHub - hlissner/dotfiles: And I say hey, what's going on?]]
 + LibrePheonix -[[https://github.com/librephoenix/nixos-config][GitHub - librephoenix/nixos-config: Nix noob trying to build his system]]
 + Vimjoyer -[[https://www.youtube.com/@vimjoyer][Vimjoyer - YouTube]]
-** Summary
-Nix isn't for everyone. I'm no authority on the matter but Here's my opinion anyways:
-*The Difficulties*
-Setting up seemingly simple things can seem daunting.
-Technical problems with NixOS can be niche and hard to search up.
-You have to learn a new programming language (It's really just json though)
-
-*The Control*
-Your system is reproducible, dynamic, fluid. Declarative.
-The setup may be a long journey, but once you get there your progress is tangible, legible, and always accessible.
-You can always go back. Every system state is saved when you update and rebuild.
-You can use both stable and unstable packages (with flakes). Get the benefits of Arch without it's worries.
+  -----
+| Shell    | zsh                  |
+| DM       | lightdm+mini-greeter |
+| WM       | Qtile                |
+| Editor   | Doom Emacs           |
+| Terminal | Kitty                |
+| Launcher | Rofi                 |
+| Browser  | Firefox              |
+| Theme    | Dracula              |
 
 More documentation under construction.....
 * Profile
